force-app/main/default/objects/Curated_Collection__c/Curated_Collection__c.object-meta.xml
<CustomObject>
    <description>Link object to create collections of Knowledge articles related to one or more products</description>
    <label>Curated Collection</label>
    <nameField>
        <label>Curated Collection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Curated Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>