force-app/main/default/objects/Curated_Collection__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Used to denote the priority order in which this collection should be displayed in the community portal</description>
    <inlineHelpText>Higher priorities are displayed higher in the community portal</inlineHelpText>
    <label>Priority</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>