force-app/main/default/objects/Curated_Collection__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <inlineHelpText>Select which products this collection relates to</inlineHelpText>
    <label>Products</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductRange</valueSetName>
    </valueSet>
</CustomField>