force-app/main/default/objects/Curated_Collection__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Multi select picklist field on curated collection for region</description>
    <inlineHelpText>Region(s) that the collection is available in. No value means the collection is available in all regions</inlineHelpText>
    <label>Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Community_Region</valueSetName>
    </valueSet>
</CustomField>