force-app/main/default/objects/Curated_Collection__c/fields/Utility_Icon__c.field-meta.xml
<CustomField>
    <fullName>Utility_Icon__c</fullName>
    <description>The utility icon name to be displayed in the customer community portal</description>
    <inlineHelpText>Pick one of the utility icons found here www.lightningdesignsystem.com/icons/#utility</inlineHelpText>
    <label>Utility Icon</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>