force-app/main/default/objects/Curated_Collection__c/listViews/Access_Financials.listView-meta.xml
<ListView>
    <fullName>Access_Financials</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Products__c</field>
        <operation>equals</operation>
        <value>Access Financials</value>
    </filters>
    <label>Access Financials</label>
</ListView>