force-app/main/default/objects/Curated_Collection__c/listViews/Access_LMS.listView-meta.xml
<ListView>
    <fullName>Access_LMS</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Products__c</field>
        <operation>equals</operation>
        <value>Access LMS</value>
    </filters>
    <label>Access LMS</label>
</ListView>