force-app/main/default/objects/Curated_Collection__c/listViews/Access_Workspace.listView-meta.xml
<ListView>
    <fullName>Access_Workspace</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Products__c</field>
        <operation>equals</operation>
        <value>Access Workspace</value>
    </filters>
    <label>Access Workspace</label>
</ListView>