force-app/main/default/objects/Curated_Collection__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Short_Description__c</columns>
    <columns>Products__c</columns>
    <columns>Utility_Icon__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>