force-app/main/default/objects/Curated_Collection__c/listViews/Dimensions.listView-meta.xml
<ListView>
    <fullName>Dimensions</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Products__c</field>
        <operation>equals</operation>
        <value>Dimensions</value>
    </filters>
    <label>Dimensions</label>
</ListView>