force-app/main/default/objects/Curated_Collection__c/listViews/Mintsoft.listView-meta.xml
<ListView>
    <fullName>Mintsoft</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Products__c</field>
        <operation>equals</operation>
        <value>Mintsoft</value>
    </filters>
    <label>Mintsoft</label>
</ListView>