force-app/main/default/objects/Curated_Collection__c/listViews/Other_Curated_collections.listView-meta.xml
<ListView>
    <fullName>Other_Curated_collections</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Products__c</field>
        <operation>equals</operation>
        <value>Other</value>
    </filters>
    <label>Other</label>
</ListView>