force-app/main/default/objects/Curated_Collection__c/listViews/Payroll.listView-meta.xml
<ListView>
    <fullName>Payroll</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Products__c</field>
        <operation>equals</operation>
        <value>Payroll</value>
    </filters>
    <label>Payroll</label>
</ListView>